# ros2_manipulator_project

./: .gitignore  README.md
src/mycobot_system/: package.xml  setup.cfg  setup.py
src/mycobot_system/launch/: assembly_task.launch.py
src/mycobot_system/mycobot_system/: manipulator_node.py  pick_and_place_trigger_node.py  task_manager_node.py  test.py  vision_node.py
src/mycobot_system/mycobot_system/config/: calib_data.npz
src/mycobot_system_interfaces/: CMakeLists.txt  package.xml
src/smartfactory_interfaces/: CMakeLists.txt  package.xml
src/smartfactory_interfaces/action/: ExecutePnP.action  ExecuteTask.action  ObserveMarker.action
src/smartfactory_interfaces/msg/: SectionResult.msg
src/smartfactory_interfaces/srv/: ExecutePnP.srv  GetCurrentCoords.srv  ObserveMarkerPose.srv
