<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!-- <name>jetcobot_interfaces</name> -->
  <name>smartfactory_interfaces</name>

  <version>0.0.0</version>
  <description>Interfaces for mycobot system</description>

  <maintainer email="jetcobot@todo.todo">jetcobot</maintainer>
  <license>MIT</license>

  <!-- build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- rosidl (⭐ 이게 핵심 ⭐) -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 반드시 필요: 인터페이스 패키지 선언 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- 테스트 (있어도 되고 없어도 됨) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>